refactoring text header alignment issues

--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -32,7 +32,7 @@
 
 .emhead {
     margin-top: 20px;
-    margin-left: 210px;
+    margin-left: 190px;
     color: black;
 }
 
@@ -45,7 +45,7 @@
 
 .gthead {
     margin-top: 20px;
-    margin-left: 200px;   
+    margin-left: 180px;   
     color: black;
     text-decoration: none;
 }
